[package]
name = "embassy-rp-sync-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-rp = "0.2.0"
embassy-sync = "0.6.0"
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
panic-probe = "0.3.2"
static_cell = "2.1.0"
