[package]
name = "embassy-rp-sync-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
embassy-rp = { version = "0.2.0", features = ["critical-section-impl"] }
embassy-sync = "0.6.0"
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-rp = { version = "0.2.0", features = ["time-driver"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
static_cell = "2.1.0"
