[package]
name = "embassy-rp-sync-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-rp = { version = "0.2.0", features = ["critical-section-impl"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
embedded-hal = "1.0.0"

[dev-dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
eg-seven-segment = "0.2.0"
embassy-embedded-hal = "0.2.0"
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-rp = { version = "0.2.0", features = ["time-driver"] }
embedded-graphics = { version = "0.8.1", features = ["fixed"] }
embedded-hal = "1.0.0"
gc9a01-rs = "0.2.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
qmi8658 = { git = "https://github.com/IniterWorker/qmi8658.git", rev = "b4c4409e131ffe24cacaf4f5819e38068e5e1d67" }
static_cell = "2.1.0"
